# WormsRemade

./: CMakeLists.txt  readme.md
include/: Camera.hpp  Config.hpp  Gravity.hpp  Mat44.hpp  RenderSystem.hpp  Renderable.hpp  RigidBody.hpp  SystemManager.hpp  Thrust.hpp  Tilemaps.hpp  Transform.hpp  Types.hpp  WindowManager.hpp
include/Components/: Camera.hpp  Gravity.hpp  Renderable.hpp  RigidBody.hpp  Thrust.hpp  Transform.hpp
include/EcsCore/: EntityManager.hpp  WindowManager.hpp
include/Systems/: CameraControlSystem.hpp  PhysicsSystem.hpp  PlayerControlSystem.hpp  RenderSystem.hpp  System.hpp
include/Utilities/: Logger.hpp  Utilities.hpp
src/: App.cpp  CMakeLists.txt  CameraControlSystem.cpp  PhysicsSystem.cpp  PlayerControlSystem.cpp  RenderSystem.cpp  WindowManager.cpp
src/Systems/: CameraControlSystem.cpp  PhysicsSystem.cpp  PlayerControlSystem.cpp  RenderSystem.cpp
